# ChemicalSearcher

./: .gitignore  CMakeLists.txt  README.md  create_release.bat  main.cpp
include/discord/: types.h
include/pubchem/: pubchemclient.cpp  pubchemclient.h
lib/: pubchemclient.cpp  pubchemclient.h
widgets/: mainwindow.cpp  mainwindow.h  mainwindow.ui
